fix: update dark mode to grey palette

--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -41,7 +41,7 @@
 	--color-text: var(--color-accent-900);
 	--color-text-secondary: var(--color-accent-800);
 	--color-button-bg: var(--color-accent-700);
-	--color-button-bg--hover: var(--color-accent-00);
+	--color-button-bg--hover: var(--color-accent-600);
 	--color-button-bg--active: var(--color-accent-800);
 	--color-button-text: var(--color-accent-50);
 	--color-button-text--hover: var(--color-accent-50);
@@ -68,20 +68,20 @@
    * Dark mode
    */
 	@media (prefers-color-scheme: dark) {
-		--color-accent: var(--color-accent-200);
-		--color-bg: var(--color-accent-900);
-		--color-bg-secondary: var(--color-accent-800);
-		--color-text: var(--color-accent-50);
-		--color-text-secondary: var(--color-accent-100);
-		--color-button-bg: var(--color-accent-800);
-		--color-button-bg--hover: var(--color-accent-700);
-		--color-button-bg--active: var(--color-accent-800);
-		--color-button-text: var(--color-accent-50);
-		--color-button-text--hover: var(--color-accent-50);
-		--color-button-text--active: var(--color-accent-50);
-		--color-overlay: oklch(0.15 0.01 46 / 0.7);
-		--color-overlay-fallback: oklch(0.15 0.01 46 / 0.9);
-		--color-shadow: oklch(0.95 0.01 46 / 0.02);
+		--color-accent: var(--color-grey-200);
+		--color-bg: var(--color-grey-900);
+		--color-bg-secondary: var(--color-grey-800);
+		--color-text: var(--color-grey-50);
+		--color-text-secondary: var(--color-grey-100);
+		--color-button-bg: var(--color-grey-800);
+		--color-button-bg--hover: var(--color-grey-700);
+		--color-button-bg--active: var(--color-grey-800);
+		--color-button-text: var(--color-grey-50);
+		--color-button-text--hover: var(--color-grey-50);
+		--color-button-text--active: var(--color-grey-50);
+		--color-overlay: oklch(0.15 0 46 / 0.7);
+		--color-overlay-fallback: oklch(0.15 0 46 / 0.9);
+		--color-shadow: oklch(0.95 0 46 / 0.02);
 	}
 }
 
@@ -90,7 +90,7 @@
 	--color-overlay-fallback: oklch(0.95 0.01 46 / 0.9);
 
 	@media (prefers-color-scheme: dark) {
-		--color-overlay: oklch(0.15 0.01 46 / 0.7);
-		--color-overlay-fallback: oklch(0.15 0.01 46 / 0.9);
+		--color-overlay: oklch(0.15 0 46 / 0.7);
+		--color-overlay-fallback: oklch(0.15 0 46 / 0.9);
 	}
 }
